--- a/WIP-restore/benchmark/runner/runner.csproj
+++ b/WIP-restore/benchmark/runner/runner.csproj
@@ -2,6 +2,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\data_repos\duplicati\Duplicati\Library\Main\Duplicati.Library.Main.csproj" />
+        <ProjectReference Include="..\data_repos\duplicati\Duplicati\CommandLine\CLI\Duplicati.CommandLine.csproj" />
         <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
         <PackageReference Include="System.CommandLine.NamingConventionBinder" Version="2.0.0-beta4.22272.1" />
     </ItemGroup>
