Added additional makefile targets to clean and run the schema benchmarks

--- a/WIP-sqlite/benchmark/index_and_schema/Makefile
+++ b/WIP-sqlite/benchmark/index_and_schema/Makefile
@@ -15,5 +15,17 @@ TARGETS := $(addprefix bin/, $(TARGETS))
 all: $(TARGETS)
 
 bin/%: %.cpp shared.hpp
-	mkdir -p $(dir $@)
+	@mkdir -p bin
 	$(CXX) $(CXXFLAGS) -o $@ $< shared.hpp -lsqlite3
+
+clean:
+	rm -rf bin reports benchmark.sqlite
+
+.PHONY: all clean
+
+run: $(TARGETS)
+	@echo "Running benchmarks..."
+	@for target in $(TARGETS); do \
+		echo "Running $$target..."; \
+		./$$target; \
+	done
